# chatbot-root

./: Makefile  README.md  deployment-dev-chatbot.yaml
.github/workflows/: aiohttp-publish.yml  chatbot-publish.yml  chatbot-release-docker-tag.yaml  chatbot-release-docker-tag.yml  docker-publish.yml  helm-publish.yaml  mcp-publish.yaml  release-tag-docker.yml
aiohttp-container/: Dockerfile  app.py  pyproject.toml
aiohttp-container/customer/: __init__.py  cli.py  keys.py
aiohttp-container/customer/config/: __init__.py  tool.py
aiohttp-container/customer/hams/: __init__.py
aiohttp-container/customer/mcp/: __init__.py
aiohttp-container/customer/service/: __init__.py
aiohttp-container/customer/tools/: __init__.py
aiohttp-container/tests/test_data/: config.yaml
aiohttp-container/tests/test_data/examples/: config-examples.yaml
aiohttp-container/tests/tools/: test_calcs.py  test_mcp_auth.py
chart/chatbot/templates/: _helpers.yaml  authorizationpolicy.yaml  job-schema.yaml  requestauthorization.yaml
charts/: chatbot-values.yaml
charts/chatbot/: Chart.yaml  values.yaml
charts/chatbot/configs/: config.yaml
charts/chatbot/templates/: NOTES.txt  authorizationpolicy.yaml  configmap.yaml  deployment.yaml  requestauthorization.yaml  service.yaml
chatbot-container/: Dockerfile  app.py  pyproject.toml
chatbot-container/chatbot/: __init__.py  cli.py  keys.py
chatbot-container/chatbot/azurebot/: __init__.py  webview.py
chatbot-container/chatbot/config/: __init__.py  tool.py
chatbot-container/chatbot/hams/: __init__.py  config.py
chatbot-container/chatbot/llmconversationhandler/: __init__.py  graph_state.py  toolregistry.py
chatbot-container/chatbot/mcp/: __init__.py
chatbot-container/chatbot/service/: __init__.py  state.py  webview.py
chatbot-container/chatbot/tools/: __init__.py  customer.py
chatbot-container/tests/: conftest.py  test_llm.py  test_mcp_auth.py  test_webview.py
chatbot-container/tests/test_data/: config.yaml
chatbot-container/tests/test_data/secrets_sample/aiclient/: google_api_key
chatbot-container/tests/test_data/secrets_sample/bot/: app_id  app_password
chatbot-container/tests/tools/: test_calcs.py
container-be/: Cargo.toml
container-be/migrations/: 20250418203922_initial.up.sql
container-be/src/: config.rs  error.rs  hams.rs  lib.rs  main.rs  metrics.rs  tokio_tools.rs
container-be/src/botapi/: abc.rs  config.rs  directline.rs  dl_apis.rs  handlers.rs  mod.rs
container-be/src/persistence/: mod.rs  parquet.rs
container-be/src/webserver/: botapi.rs  hello.rs  lists.rs  mod.rs
container-be/src_old/: error.rs  lib.rs  main.rs  tokio_tools.rs
container-be/src_old/bot/: mod.rs
container-be/test-data/: config-localhost.yaml
container-be/test-data/secrets/app/: id  password
container-be/test-data/secrets/db/: username
container-python/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
container-python/chatbot/: app.py  bot.py  cli.py  config.py  keys.py  toolutils.py
container-python/chatbot/azurebot/: __init__.py
container-python/chatbot/config/: __init__.py  gemini.py  tool.py
container-python/chatbot/conversationllmhandler/: __init__.py
container-python/chatbot/gemini/: __init__.py  config.py
container-python/chatbot/hams/: __init__.py
container-python/chatbot/myai/: __init__.py  (+3 more)
container-python/initial_chat_bot/: app.py  config.py
fluxcd-dev/: app-chatbot.yaml  app-mcp.yaml  virtualservice.yaml
mcp-container/: pyproject.toml
mcp-container/customer/: __init__.py
terraform/: main.tf
(+33 files in other folders)
