[package]
name = "polecatteamsbot"
version = "0.1.0"
edition = "2021"
authors = ["Ben Greene <BenJGreene@gmail.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
env_logger = "~0.11"
futures = "~0.3"
log = "~0.4"
serde =  { version ="~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_with = { version = "3.12", features = ["time_0_3", "macros"] }
thiserror = { version = "~2.0"}

figment = { version = "~0.10", features = ["yaml", "env"] }
figment_file_provider_adapter = "~0.1.1"
tokio = { version = "~1.43", features = ["full"] }
# tokio-stream = "0.1.14"
tokio-util = { version = "~0.7", default-features = false }
warp = "~0.3.5"

sqlx = { version = "~0.8", features = [ "runtime-tokio", "postgres", "migrate", "json", "chrono", "rust_decimal"] }
parquet = "55"
parquet_derive = "55"

# bigdecimal = "0.4.7"
chrono = {version = "0.4.40", features = ["serde"]}
url = { version = "2", features = ["serde"] }

reqwest = { version = "~0.12", default-features = false, features = ["json"] }
hamsrs = { git = "https://github.com/PolecatWorks/hams.git" }
ffi-log2 = { git = "https://github.com/PolecatWorks/hams.git" }
derive_builder = "0.20.2"
prometheus = "0.14.0"
openidconnect = "4.0.0"
humantime-serde = "1.1"
